name:                opengl-examples
version:             0.1.0.0
homepage:            https://github.com/stla/opengl-examples#readme
license:             GPL-3
author:              Stéphane Laurent
maintainer:          laurent_step@yahoo.fr
copyright:           2018 Stéphane Laurent
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

flag exe
  description: build the executables
  default: True

library
  hs-source-dirs:      src
  exposed-modules:     TruncatedCuboctahedron
                     , TruncatedCuboctahedron.Data
                     , TruncatedCuboctahedron2
                     , Teapot.Data
                     , Teapot
                     , TeapotAnimation
                     , Utils.ConvertPPM
                     , Utils.OpenGL
                     , Tutorial2
                     , Tutorial2.Bindings
                     , Tutorial2.Cube
                     , Tutorial2.Display
                     , Tutorial2.Points
                     , Utils.ReadOFF
                     , Mushroom
                     , Mushroom.Data
                     , Utils.Colour
                     , Utils.Cylinder
                     , Cylinder
                     , Tesseract
                     , Tesseract.Data
                     , TesseractRotated
                     , Tesseract.Transformations4D
                     , Utils.Prism
                     , Prism
                     , Utils.Torus
                     , Torus
                     , Torus2
                     , Utils.Mobius
                     , Mobius
                     , Mobius2
                     , Mobius3
                     , Utils.PrismaticPath
                     , PrismaticPath
                     , Helix
                     , Knot
                     , Utils.TorusKnot
                     , TorusKnot
                     , Utils.SphereMesh
                     , SphereMesh
                     , Utils.HorseSaddle
                     , HorseSaddle
                     , HorseSaddle2
                     , HorseSaddle3
                     , GreatIcosahedron.Data
                     , GreatIcosahedron
                     , CompoundFiveTetrahedra.Data
                     , CompoundFiveTetrahedra
                     , CompoundFiveTetrahedra2
                     , Head.Data
                     , Head
                     , SpaceShuttle.Data
                     , SpaceShuttle
                     , CompoundTenTetrahedra.Data
                     , CompoundTenTetrahedra
                     , CompoundTenTetrahedra2
                     , GreatStellatedDodecahedron
                     , GreatStellatedDodecahedron.Data
                     , Utils.SphereWedge
                     , SphereWedge
                     , Hosohedron
                     , CompoundFiveOctahedra
                     , CompoundFiveOctahedra.Data
                     , Strange.Data
                     , Strange
                     , TruncatedTesseract.Data
                     , TruncatedTesseract
                     , RectifiedTesseract.Data
                     , RectifiedTesseract
                     , CantellatedTesseract.Data
                     , CantellatedTesseract
                     , Utils.SphereWedgeThick
                     , SphereWedgeThick
                     , HexagonalDuoprism.Data
                     , HexagonalDuoprism
                     , Hexasquare.Data
                     , Cubinder.Data
                     , Cubinder
                     , Duocylinder
                     , Duocylinder.Data
                     , CompoundFiveCubes.Data
                     , CompoundFiveCubes
                     , Utils.SphericalTriangle
                     , SphericalTriangle
                     , Bunny.Data
                     , Bunny
                     , CGAL.CGAL02
                     , CGAL.CGAL03
                     , CGAL.CGALunion
                     , CGALunion
                     , CGAL02
                     , CGAL03
                     , CGAL.CGALinterTwoSpheres
                     , CGALinterTwoSpheres
                     , NonconvexPolyhedron.Data
                     , NonconvexPolyhedron.Data2
                     , NonconvexPolyhedron
                     , Utils.TetrahedronFaces
                     , CompoundFiveTetrahedraIntersection
                     , CompoundFiveTetrahedra.Intersection
                     , TriangulatedSphere.Data
                     , TriangulatedSphere
                     , Intersections.CubeIsocahedron
                     , InterCubeIsocahedron
                     , Octaplex.Data
                     , Octaplex
                     , Utils.Cone
                     , Cone
                     , Utils.ConeDouble
                     , ConeDouble
                     , Intersections.SphereSphere
                     , InterSphereSphere
                     , Unions.SphereSphere
                     , UnionSphereSphere
                     , CGAL.CGALunionTwoCubes
                     , CGALunionTwoCubes
                     , Utils.SphericalTetrahedron
                   --  , SphericalTetrahedron
                     , Utils.CartesianPolar
                     , CompoundFiveTetrahedra.DataPolar
                     , Utils.TetrahedronMesh
                     , RegularSphericalTetrahedron
                     , RegularSphericalTetrahedron.Data
                    --  , SphericalTetrahedron
                     , StellationsRhombicTriacontahedron.Data8
                     , StellationRhombicTriacontahedron8
                     , Unions.ThreeCubes
                     , Unions.FiveCubes
                     , UnionThreeCubes
                     , UnionFiveCubes
                     , UnionFiveTetrahedra
                     , Unions.FiveTetrahedra
                     , Intersections.FiveCubes
                     , InterFiveCubes
                     , SnubDodecahedron.Data
                     , Hexacosihedron.Data
                     , Hexacosihedron
                     , Dodecaplex.Data
                     , Dodecaplex
                     , Intersections.CubeGSD
                     , InterCubeGSD
                     , Utils.RegularSphere.RegularSphere
                     , SineSurface.Data
                     , SineSurface
                     , Truncated120Cell3.Data
                     , SmallHexagrammaticHexecontahedron.Data
                     , SmallHexagrammaticHexecontahedron
                     , Hopf.Hopf
                     , CantiTrunc600Cell.Data
                     , AllCubes.TheCubes
                     , SteinerSurface
                     , Chamfered4dodecahedron.Data
                     , Chamfered4dodecahedron.Chamfered4dodecahedron
                     , Pentaract.Data
                     , Pentaract.Pentaract
                     , Pentaract.Pentaract2
                     , Pentaract.Pentaract3
                     , BianchiPinkall.Helpers
                     , BianchiPinkall.BianchiPinkall
                     , BianchiPinkall.BianchiPinkallAnim
                     , BiTruncatedTesseract.Data
                     , BiTruncatedTesseract.BiTruncatedTesseract
                     , BoySurface.Data
                     , BoySurface.BoySurface
                     , Utils.Quads.Color
                     , BoyRoman.Data
                     , BoyRoman.BoyRoman
                     , SnubDodecahedron.Data2
                     , SnubDodecahedron2
                     , Dupin.Data
                     , Dupin.Dupin
                     , KleinBottle.Data
                     , KleinBottle.KleinBottle
                     , KleinBottle4D.Data
                     , KleinBottle4D.KleinBottle4D
                     , Omnitruncated120Cell.Data
                     , Omnitruncated120Cell.Omnitruncated120Cell
                     , ConicalSpiral.Data
                     , ConicalSpiral.ConicalSpiral
                     , ConicalSpiral.Data2
                     , ConicalSpiral.ConicalSpiral2
                     , ConicalSpiral.ConicalSpiral3
                     , ConicalSpiral.DataDoubly
                     , ConicalSpiral.DoublyConicalSpiral
                     , ConicalSpiral.Data4
                     , ConicalSpiral.ConicalSpiral4
                     , ConicalSpiral.ConicalSpiral5
                     , WavyCylinder.Data
                     , Utils.Palettes
                     , WavyTorus.Data
                     , WavyTorus.WavyTorus
                     , Gear.Data
                     , Gear.Gear
                     , EllipticTorus.Data
                     , EllipticTorus.EllipticTorus
                     , Heart.Data
                     , Heart.Heart
                     , Heart.Utils
                     , KleinBottleGray.Data
                     , KleinBottleGray.KleinBottleGray
                     , Apple.Data
                     , Apple.Apple
                     , Euphonium.Data
                     , Euphonium.Euphonium
                     , Seashell.Data
                     , Seashell.Seashell
  build-depends:       base >= 4.7 && < 5
                     , OpenGL
                     , GLUT
                     , gl-capture
                     , bytestring
                     , containers
                     , hip
                     , directory
                     , colour
                     , palette
                     , ilist
                     , linear
                     , extra
                     , split
                     , permutation
                     , combinat
                     , HaskellForMaths
                     , numeric-tools
                     , vector
  default-language:    Haskell2010
  ghc-options:        -Wall

executable truncatedCuboctahedron
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeTruncatedCuboctahedron.hs
  ghc-options:         -O2 -threaded -with-rtsopts=-N -main-is ExeTruncatedCuboctahedron
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable truncatedCuboctahedron2
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeTruncatedCuboctahedron2.hs
  ghc-options:         -O2 -threaded -with-rtsopts=-N -main-is ExeTruncatedCuboctahedron2
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable teapot
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeTeapot.hs
  ghc-options:         -O2 -threaded -with-rtsopts=-N -main-is ExeTeapot
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable teapotanim
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeTeapotAnimation.hs
  ghc-options:         -fllvm -main-is ExeTeapotAnimation
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable tutorial2
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeTutorial2.hs
  ghc-options:         -O2 -threaded -with-rtsopts=-N -main-is ExeTutorial2
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable mushroom
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeMushroom.hs
  ghc-options:         -O2 -threaded -with-rtsopts=-N -main-is ExeMushroom
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable cylinder
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeCylinder.hs
  ghc-options:         -O2 -threaded -with-rtsopts=-N -main-is ExeCylinder
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable tesseract
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeTesseract.hs
  ghc-options:         -fllvm -main-is ExeTesseract
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable tesseractrotated
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeTesseractRotated.hs
  ghc-options:         -fllvm -main-is ExeTesseractRotated
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable truncatedtesseract
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeTruncatedTesseract.hs
  ghc-options:         -fllvm -main-is ExeTruncatedTesseract
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable rectifiedtesseract
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeRectifiedTesseract.hs
  ghc-options:         -fllvm -main-is ExeRectifiedTesseract
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable cantellatedtesseract
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeCantellatedTesseract.hs
  ghc-options:         -fllvm -main-is ExeCantellatedTesseract
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable prism
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExePrism.hs
  ghc-options:         -O2 -threaded -with-rtsopts=-N -main-is ExePrism
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable torus
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeTorus.hs
  ghc-options:         -fllvm -main-is ExeTorus
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable torus2
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeTorus2.hs
  ghc-options:         -O2 -threaded -with-rtsopts=-N -main-is ExeTorus2
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable prismaticpath
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExePrismaticPath.hs
  ghc-options:         -fllvm -main-is ExePrismaticPath
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable helix
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeHelix.hs
  ghc-options:         -fllvm -main-is ExeHelix
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable knot
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeKnot.hs
  ghc-options:         -fllvm -main-is ExeKnot
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable torusknot
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeTorusKnot.hs
  ghc-options:         -fllvm -main-is ExeTorusKnot
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable mobius
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeMobius.hs
  ghc-options:         -O2 -threaded -with-rtsopts=-N -main-is ExeMobius
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable mobius2
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeMobius2.hs
  ghc-options:         -fllvm -main-is ExeMobius2
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable mobius3
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeMobius3.hs
  ghc-options:         -fllvm -main-is ExeMobius3
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable spheremesh
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeSphereMesh.hs
  ghc-options:         -fllvm -main-is ExeSphereMesh
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable horsesaddle
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeHorseSaddle.hs
  ghc-options:         -fllvm -main-is ExeHorseSaddle
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable horsesaddle2
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeHorseSaddle2.hs
  ghc-options:         -fllvm -main-is ExeHorseSaddle2
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable horsesaddle3
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeHorseSaddle3.hs
  ghc-options:         -fllvm -main-is ExeHorseSaddle3
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable greaticosahedron
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeGreatIcosahedron.hs
  ghc-options:         -fllvm -main-is ExeGreatIcosahedron
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable greatstellateddodecahedron
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeGreatStellatedDodecahedron.hs
  ghc-options:         -fllvm -main-is ExeGreatStellatedDodecahedron
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable compoundfivetetrahedra
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeCompoundFiveTetrahedra.hs
  ghc-options:         -fllvm -main-is ExeCompoundFiveTetrahedra
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable compoundfivetetrahedra2
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeCompoundFiveTetrahedra2.hs
  ghc-options:         -fllvm -main-is ExeCompoundFiveTetrahedra2
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable compoundtentetrahedra
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeCompoundTenTetrahedra.hs
  ghc-options:         -fllvm -main-is ExeCompoundTenTetrahedra
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable compoundtentetrahedra2
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeCompoundTenTetrahedra2.hs
  ghc-options:         -fllvm -main-is ExeCompoundTenTetrahedra2
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable compoundfiveoctahedra
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeCompoundFiveOctahedra.hs
  ghc-options:         -fllvm -main-is ExeCompoundFiveOctahedra
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable hosohedron
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeHosohedron.hs
  ghc-options:         -fllvm -main-is ExeHosohedron
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable thickspherewedge
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeSphereWedgeThick.hs
  ghc-options:         -fllvm -main-is ExeSphereWedgeThick
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable hexagonalduoprism
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeHexagonalDuoprism.hs
  ghc-options:         -fllvm -main-is ExeHexagonalDuoprism
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable bunny
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeBunny.hs
  ghc-options:         -fllvm -main-is ExeBunny
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable triangulatedsphere
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeTriangulatedSphere.hs
  ghc-options:         -fllvm -main-is ExeTriangulatedSphere
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable kleinbottle4d
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeKleinBottle4D.hs
  ghc-options:         -fllvm -main-is ExeKleinBottle4D
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable conicalspiral
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeConicalSpiral.hs
  ghc-options:         -fllvm -main-is ExeConicalSpiral
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable doublyconicalspiral
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeDoublyConicalSpiral.hs
  ghc-options:         -fllvm -main-is ExeDoublyConicalSpiral
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable conicalspiral2
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeConicalSpiral2.hs
  ghc-options:         -fllvm -main-is ExeConicalSpiral2
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable wavycylinder
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeWavyCylinder.hs
  ghc-options:         -fllvm -main-is ExeWavyCylinder
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable gears
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeGears.hs
  ghc-options:         -fllvm -main-is ExeGears
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable elliptictorus
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeEllipticTorus.hs
  ghc-options:         -fllvm -main-is ExeEllipticTorus
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable heart
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeHeart.hs
  ghc-options:         -fllvm -main-is ExeHeart
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable kleinbottlegray
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeKleinBottleGray.hs
  ghc-options:         -fllvm -main-is ExeKleinBottleGray
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable apple
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeApple.hs
  ghc-options:         -fllvm -main-is ExeApple
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable euphonium
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeEuphonium.hs
  ghc-options:         -fllvm -main-is ExeEuphonium
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable seashell
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeSeashell.hs
  ghc-options:         -fllvm -main-is ExeSeashell
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/stla/opengl-examples
